{
    "version": 1,
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "804b6d07-d889-4b0b-8704-862c19931078",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "1d88ab48-e005-4261-a4d2-bd480cc60fe3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "cc527c0f-98a2-4aa3-8071-0adc3003ac0f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4e0a76d4-2ddd-4fc3-a383-8fddd0668ebf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "e8b30e5f-eac3-4cc8-9c32-12cb48748a35",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "45556092-c3d0-4ba5-a7f7-f0a3e3e2c6a2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8c089bb7-9291-49f6-b48d-65469de81fce",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CharSelection",
            "id": "215794c3-4015-4263-a363-dfbe78952ef6",
            "actions": [
                {
                    "name": "SwitchTo1",
                    "type": "Button",
                    "id": "1aca10c3-f086-4506-88ca-57a11a61fe50",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchTo2",
                    "type": "Button",
                    "id": "8aa4ce9e-3add-4eb1-ace5-37e29a70c49a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchTo3",
                    "type": "Button",
                    "id": "54bb2953-3f84-49a5-9867-4de152600b2a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6954a206-5d06-45b9-ab4c-3f3dc31437ac",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchTo1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a518a0b-4551-4f57-b53e-2e206f6725f5",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchTo2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d1ef203-3484-4b7b-b0c2-ad6feced686d",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchTo3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Reset",
            "id": "eb334dcf-388c-4681-8880-0e2c217c6ec5",
            "actions": [
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "e8b19cc4-b1b7-4e40-b358-52fec033d725",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7e9ff582-cc98-4a3f-b4f6-0b9232e42647",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "429610b3-6525-4f12-9995-9ff4d3378891",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}